# cath-ted-check-hmm-matches

./: .gitignore  README.md  compare_ted_hmm.ipynb  domain_comparison_results_human.tsv  domain_visualization.ipynb  luck_analyses.ipynb  plot_density.py  pyproject.toml  requirements.txt
analyses/: compare_ted_hmm.ipynb  migrate_annotate.py  migrate_upgrade_v2.py  plot_density.py  scatterplot.py
data/: domain_comparison_results_human.processed.tsv  domain_comparison_results_human.tsv
data/luck_analyses_human/: luck_results.tsv
domain_vis/: __init__.py  core.py  domain_vis.py  domain_vis_luck.py  visualize.py
migrations/: domain_comparison_results_annotate.py
results/: domain_comparison_results_human.processed.annotated.tsv  domain_comparison_results_human.processed.bak  domain_comparison_results_human.processed.tsv
